Fix spacing :)

--- a/styles/about_styles.css
+++ b/styles/about_styles.css
@@ -197,7 +197,7 @@
 
 @media screen and (max-width: 480px) {
     .main__container {
-        height: 280vh;
+        height: 250vh;
     }
 
     .main__content h1 {
